--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.0'
       - run: go build -v ./...
       - run: go test -v ./...
   deploy:
